--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,1 +1,60 @@
+.main-head {
+  background: #024a63;
+  color: white;
+}
 
+.active-link {
+  text-decoration: none;
+  color: white;
+  font-size: 2rem;
+}
+
+nav {
+  display: flex;
+  min-height: 10vh;
+  width: 98%;
+  margin: auto;
+  align-items: center;
+}
+
+nav ul {
+  display: flex;
+  flex: 8 1 10rem;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
+  font-family: "Cabin", sans-serif;
+  padding-top: 1.3rem;
+}
+
+#logo {
+  flex: 1 1 10rem;
+  background-color: #024a63;
+}
+.join {
+  padding: 0.5rem 2rem;
+  background: #ff7c5c;
+  border: 0rem solid white;
+  color: white;
+  font-size: 2rem;
+  border-radius: 2.4rem;
+  font-family: "Cabin", sans-serif;
+}
+
+.login {
+  padding: 0.5rem 2rem;
+  background: white;
+  border: 0rem solid white;
+  color: black;
+  font-size: 2rem;
+  border-radius: 2.4rem;
+  font-family: "Cabin", sans-serif;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+i {
+  font-size: 2rem;
+}
