--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -2,6 +2,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  // sets the font size to 10 px so we can use rems easily
 }
+
+html {
+  font-size: 62.5%;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Cabin:wght@600&display=swap");
+
+// 1 rem = 10px;
 
 @import "./navbar";
