--- a/src/styles/_aboutUs.scss
+++ b/src/styles/_aboutUs.scss
@@ -1,27 +1,98 @@
 .card {
-    border: none;
-  }
-  .header {
-    font-family: "Cabin", sans-serif;
-    font-size: 8rem;
-    font-weight: 700;
-    margin-top: 9.2rem;
-  }
-  
-  .header-text {
-    font-family: "Cabin", sans-serif;
-    font-size: 3.5rem;
-    font-weight: 400;
-    padding: 2.8rem 9.5rem 11.3rem 9.5rem;
-  }
-  .learn-how {
-    padding: 0.5rem 2rem;
-    margin-top: -2rem;
-    background: #ff7c5c;
-    border: 0rem solid white;
-    color: white;
-    font-size: 2rem;
-    font-weight: 600;
-    border-radius: 4.3rem;
-    font-family: "Cabin", sans-serif;
-  }
+  border: none;
+}
+.header {
+  font-family: "Cabin", sans-serif;
+  font-size: 8rem;
+  font-weight: 700;
+  margin-top: 9.2rem;
+}
+
+.header-text {
+  font-family: "Cabin", sans-serif;
+  font-size: 3.5rem;
+  font-weight: 400;
+  padding: 2.8rem 9.5rem 11.3rem 9.5rem;
+}
+.learn-how {
+  padding: 0.5rem 2rem;
+  margin-top: -2rem;
+  background: #ff7c5c;
+  border: 0rem solid white;
+  color: white;
+  font-size: 2rem;
+  font-weight: 600;
+  border-radius: 4.3rem;
+  font-family: "Cabin", sans-serif;
+}
+.repeating-h1 {
+  color: #024a63;
+  font-family: "Cabin", sans-serif;
+  font-size: 6rem;
+  font-weight: 700;
+  margin-top: 3rem;
+}
+.repeating-h2 {
+  color: #024a63;
+  font-family: "Cabin", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 400;
+  margin-top: 1.6rem;
+  line-height: 3.5rem;
+  margin-bottom: 3rem;
+}
+
+.slide {
+  padding-top: 6rem;
+  padding-left: 14.5rem;
+  padding-right: 14.5rem;
+}
+
+.card-title {
+  font-family: "Cabin", sans-serif;
+  font-size: 3.5rem;
+  font-weight: 600;
+}
+
+.card-text {
+  font-family: "Raleway", sans-serif;
+  font-size: 2rem;
+  font-weight: 400;
+  margin-bottom: 2.4rem;
+}
+
+.card rounded-circle {
+  width: 30.8rem;
+  height: 35.8rem;
+  padding: 3.5rem;
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+  //background-color: #e2f0ef !important;
+}
+
+.container {
+  margin-left: 40rem;
+  margin-right: 16rem;
+}
+
+.accordion {
+  margin-bottom: 3.2rem;
+  background-color: #e2f0ef !important;
+}
+
+.accordion-body {
+  font-family: "Raleway", sans-serif;
+  font-size: 2.3rem;
+  font-weight: 500;
+}
+.button-accordian {
+  font-family: "Cabin", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 600;
+  padding: 2rem 5rem 2rem 5rem;
+  background-color:#ff7c5c;;
+  border: none;
+  border-radius: 4.3rem;
+  color: white;
+  width: 28.4rem;
+}
