--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Cabin:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -48,30 +48,32 @@ nav ul {
           align-items: center;
   list-style: none;
   font-family: "Cabin", sans-serif;
+  padding-top: 1.3rem;
 }
 
 #logo {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 10rem;
           flex: 1 1 10rem;
+  background-color: #024a63;
 }
 
 .join {
-  padding: 0.5rem 1.2rem;
+  padding: 0.5rem 2rem;
   background: #ff7c5c;
   border: 0rem solid white;
   color: white;
-  font-size: 1.5rem;
+  font-size: 2rem;
   border-radius: 2.4rem;
   font-family: "Cabin", sans-serif;
 }
 
 .login {
-  padding: 0.5rem 1.2rem;
+  padding: 0.5rem 2rem;
   background: white;
   border: 0rem solid white;
   color: black;
-  font-size: 1.5rem;
+  font-size: 2rem;
   border-radius: 2.4rem;
   font-family: "Cabin", sans-serif;
 }
@@ -82,5 +84,116 @@ nav ul {
 
 i {
   font-size: 2rem;
+}
+
+.homepage-color {
+  background: #024a63;
+  color: white;
+  width: 75%;
+  height: 217px;
+  border-radius: 5.8rem;
+  margin-left: 12%;
+  margin-right: 12%;
+  margin-top: 8rem;
+}
+
+.learn-how {
+  padding: 0.5rem 3.5rem;
+  margin-top: -2rem;
+  background: #ff7c5c;
+  border: 0rem solid white;
+  color: white;
+  font-size: 2rem;
+  font-weight: 600;
+  border-radius: 4.3rem;
+  font-family: "Cabin", sans-serif;
+}
+
+.oceaneers-cabin-large {
+  font-family: "Cabin", sans-serif;
+  font-weight: 700;
+  font-size: 8rem;
+}
+
+.oceaneers-cabin-small {
+  font-family: "Cabin", sans-serif;
+  font-weight: 100;
+  font-size: 4rem;
+}
+
+.oceaneers-cabin {
+  font-family: "Cabin", sans-serif;
+  font-weight: 700;
+  font-size: 4.5rem;
+}
+
+.oceaneers-raleway {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 30px;
+  margin-top: 2rem;
+  font-style: "Regular 400";
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.our-purpose {
+  color: #024a63;
+  font-family: "Cabin", sans-serif;
+  font-weight: 700;
+  margin-top: 8rem;
+  font-size: 60px;
+  text-align: center;
+}
+
+.our-purpose-text {
+  color: #024a63;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  margin-top: 80px;
+  text-align: center;
+  font-size: 2rem;
+  margin-top: 1.5%;
+  margin-left: 229px;
+  margin-right: 228px;
+}
+
+.accordion {
+  margin-top: 3.2rem;
+  margin-bottom: 3.2rem;
+  background-color: #e2f0ef !important;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.accordion-body {
+  font-family: "Raleway", sans-serif;
+  font-size: 2.3rem;
+  font-weight: 500;
+}
+
+.button-accordian {
+  font-family: "Cabin", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 600;
+  padding: 2rem 5rem 2rem 5rem;
+  background-color: #024a63;
+  border: none;
+  border-radius: 4.3rem;
+  color: white;
+  width: 32.4rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 20px;
+  margin-right: 10%;
 }
 /*# sourceMappingURL=home.css.map */
