--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -7,17 +7,23 @@
     margin-left: 12%;
     margin-right: 12%;
     margin-top: 80px;
-    font: cabin; 
-    /*font-size: 45px; so how do I make this so that it only changes one of the text sizes*/ 
   }
 
   .oceaneers-raleway {
-      font: Raleway;
+      font-family: "Raleway", sans-serif;
   }
   
-  .oceaneers-cabin {
-      font:  Cabin;
+  .oceaneers-cabin-700 {
+      font-family: "Cabin", sans-serif;
+      font-weight: 700;
+      font-size: 80px;
   }
+
+  .oceaneers-cabin-400 {
+    font-family: "Cabin", sans-serif;
+    font-weight: 100;
+    font-size: 4rem;
+}
 
   .our-purpose {
       color: #024a63;
@@ -54,6 +60,8 @@
     padding: 20px;
     margin-right: 10%;
   }
+
+  @import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
   
 
 
