--- a/src/styles/_aboutUs.scss
+++ b/src/styles/_aboutUs.scss
@@ -41,6 +41,16 @@
   line-height: 3.5rem;
   margin-bottom: 3rem;
 }
+.repeating-h2-name {
+  color: #024a63;
+  padding-top: 6rem;;
+  font-family: "Cabin", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 400;
+  margin-top: 1.6rem;
+  line-height: 3.5rem;
+  margin-bottom: 3rem;
+}
 .repeating-h3 {
   color: #024a63;
   font-family: "Cabin", sans-serif;
@@ -59,6 +69,19 @@
   margin-left: 4rem;
   margin-bottom: 3rem;
   padding-top: 2rem;
+}
+.h3 {
+  padding-top: 0rem;
+  padding-bottom: 2rem;
+  font-family: Cabin;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 36px;
+  display: flex;
+  align-items: center;
+
+  color: #024A63;
 }
 
 .slide {
@@ -93,7 +116,6 @@
   border-radius: 10.3rem;
 }
 
-
 .accordion {
   margin-bottom: 3.2rem;
   background-color: #e2f0ef !important;
@@ -115,4 +137,38 @@
   border-radius: 4.3rem;
   color: white;
   width: 25.4rem;
+}
+.container-2 {
+  width: 118rem;
+  height: 523px;
+  left: 59px;
+  top: 1618px;
+  
+  background: #FFFFFF;
+  border: 1px solid #024A63;
+  box-sizing: border-box;
+  margin-left: 4rem;
+  border-radius: 58px;
+  }
+
+  .col-8 {
+  width: 781px;
+  height: 168px;
+  left: 549px;
+  top: 1796px;
+
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 18px;
+
+  color: #024A63;
+  }
+
+.rounded-circle-am{
+  padding-top: 10rem;
+  padding-left: 3rem;
+  width: 35rem;
+  border-radius: 50%;
 }
