--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -8,12 +8,15 @@
 
 html {
   font-size: 62.5%; // 1 rem = 10px;
+  font-family: "Cabin", sans-serif;
 }
 
 // import partials for scss and import fonts here !
 
-@import url("https://fonts.googleapis.com/css2?family=Cabin:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "./navbar";
+@import "./why";
+@import "./newsletter";
 
 $hero-height: 60vh;
 
