--- a/src/styles/_partners.scss
+++ b/src/styles/_partners.scss
@@ -3,20 +3,20 @@
 }
 .header {
   font-family: "Cabin", sans-serif;
-  font-size: 8rem;
+  font-size: 6.5rem;
   font-weight: 700;
   margin-top: 9.2rem;
 }
 
 .header-text {
   font-family: "Cabin", sans-serif;
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-weight: 400;
   margin: 2.8rem 9.5rem 11.3rem 9.5rem;
 }
 // ORANGE BUTTON
 .learn-how {
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 3.5rem;
   margin-top: -2rem;
   background: #ff7c5c;
   border: 0rem solid white;
@@ -42,15 +42,15 @@
 .repeating-h1 {
   color: #024a63;
   font-family: "Cabin", sans-serif;
-  font-size: 6rem;
+  font-size: 4.5rem;
   font-weight: 700;
   margin-top: 4rem;
 }
 .repeating-h2 {
   color: #024a63;
   font-family: "Cabin", sans-serif;
-  font-size: 3rem;
-  font-weight: 400;
+  font-size: 2.4rem;
+  font-weight: normal;
   margin: 1.6rem 25rem 1rem 25rem;
   line-height: 3.5rem;
 }
@@ -124,7 +124,6 @@
 .accordion-body {
   background-color: #e2f0ef;
   margin-top: -4rem;
-  margin-left: 5rem;
   width: 32.4rem;
   border-radius: 0rem 0rem 4.3rem 4.3rem;
 }
@@ -142,22 +141,15 @@
   font-family: "Cabin", sans-serif;
   font-size: 2.5rem;
   font-weight: 600;
-  padding-bottom: 5rem;
-  padding-top: 2rem;
   background-color: #024a63;
-  margin-left: 5rem;
   border: none;
   border-radius: 4.3rem;
   color: white;
-  height: 4rem;
+  height: 7.4rem;
   width: 32.4rem;
-
   position: relative;
 }
-// .accordion-item {
-//   background-color: #024a63 !important;
-//   border-radius: 50px 50px 50px 50px !important;
-// }
+
 .plus-icon {
   position: absolute;
   right: 1.6rem;
