--- a/src/styles/_partners.scss
+++ b/src/styles/_partners.scss
@@ -57,10 +57,8 @@
 
 // Grid carousel
 
-// .card-img {
-//   height: auto;
-//   width: auto;
-// }
+.card-img {
+}
 
 .slide {
   padding-top: 6rem;
@@ -81,7 +79,7 @@
   font-family: "Raleway", sans-serif;
   font-size: 2rem;
   font-weight: 400;
-  margin-bottom: 2.4rem;
+  padding-bottom: 1rem;
 }
 
 .bi-arrow-right-circle {
