--- a/src/styles/_aboutUs.scss
+++ b/src/styles/_aboutUs.scss
@@ -1,21 +1,22 @@
 .card {
   border: none;
 }
+
 .header {
   font-family: "Cabin", sans-serif;
-  font-size: 8rem;
+  font-size: 6.5rem;
   font-weight: 700;
   margin-top: 9.2rem;
 }
 
 .header-text {
   font-family: "Cabin", sans-serif;
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-weight: 400;
   padding: 2.8rem 9.5rem 11.3rem 9.5rem;
 }
 .learn-how {
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 3.5rem;
   margin-top: -2rem;
   background: #ff7c5c;
   border: 0rem solid white;
@@ -28,15 +29,15 @@
 .repeating-h1 {
   color: #024a63;
   font-family: "Cabin", sans-serif;
-  font-size: 6rem;
-  font-weight: 700;
+  font-size: 4.5rem;
+  font-weight: bold;
   margin-top: 3rem;
 }
 .repeating-h2 {
   color: #024a63;
   font-family: "Cabin", sans-serif;
-  font-size: 2.5rem;
-  font-weight: 400;
+  font-size: 2.4rem;
+  font-weight: normal;
   margin-top: 1.6rem;
   line-height: 3.5rem;
   margin-bottom: 3rem;
@@ -83,7 +84,26 @@
 
   color: #024A63;
 }
-
+.repeating-h3-team {
+  color: #024a63;
+  padding-top: 0.4rem;;
+  font-family: "Cabin", sans-serif;
+  font-size: 2rem;
+  font-weight: normal;
+  font-style: normal;
+  margin-top: -2.5rem;
+  margin-bottom: 3rem;
+}
+.h4 {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1rem;
+  padding-top: 1rem;
+  font-style: italic;
+  text-align: center;
+  color: #024A63;
+}
 .slide {
   padding-top: 6rem;
   padding-left: 14.5rem;
@@ -118,7 +138,7 @@
 
 .accordion {
   margin-bottom: 3.2rem;
-  background-color: #e2f0ef !important;
+  //background-color: #e2f0ef !important;
 }
 
 .accordion-body {
@@ -128,18 +148,25 @@
 }
 .button-accordian {
   font-family: "Cabin", sans-serif;
-  font-size: 2rem;
+  font-size: 1.3rem;
   font-weight: 300;
-  padding: 2rem 4rem 2rem 4rem;
+  padding: 1rem 3rem 1rem 3rem;
   outline: none;
-  background-color:#ff7c5c;;
-  border: 0rem;
+  background:#ff7c5c;
+  border: 0rem solid white;
   border-radius: 4.3rem;
   color: white;
-  width: 25.4rem;
+  width: 13rem;
+  height: 4rem;
+  
+  margin-top: -3rem;
+  margin-bottom: -3rem;
+  margin-left: -3rem;
+  margin-right: -3rem;
+  
 }
 .container-2 {
-  width: 118rem;
+  width: 115rem;
   height: 523px;
   left: 59px;
   top: 1618px;
@@ -167,8 +194,62 @@
   }
 
 .rounded-circle-am{
-  padding-top: 10rem;
+  padding-top: 7rem;
   padding-left: 3rem;
   width: 35rem;
-  border-radius: 50%;
+  overflow: hidden;
+  margin-bottom: 2rem;
+
+}
+
+.interview {
+  padding: 2rem 3rem;
+  margin-top: 3rem;
+  background: #ff7c5c;
+  border: 0rem solid white;
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 600;
+  border-radius: 4.3rem;
+  font-family: "Cabin", sans-serif;
+}
+
+.bi-instagram {
+  margin-top: -4rem;
+  font-size: 2.5rem;
+}
+.bi-facebook {
+  margin-top: -4rem;
+  margin-left: 2rem;
+  font-size: 2.5rem;
+}
+
+.il{
+  font-size: 1.75rem;
+  margin-top:0.3rem;
+  //margin-bottom: 0.2rem;
+}
+
+.rounded{
+  margin-top: 5rem;
+  width: 20%;
+}
+.repeating-h2-iggy {
+  color: #024a63;
+  padding-top: 4rem;;
+  font-family: "Cabin", sans-serif;
+  font-size: 2.5rem;
+  font-weight: 600;
+  margin-top: -2.5rem;
+  margin-bottom: 3rem;
+}
+.repeating-h3-iggy {
+  color: #024a63;
+  padding-top: 2rem;;
+  font-family: "Cabin", sans-serif;
+  font-size: 2.2rem;
+  font-weight: normal;
+  font-style: normal;
+  margin-top: -2.5rem;
+  margin-bottom: 3rem;
 }
