--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -6,8 +6,7 @@
   border-radius: 5.8rem;
   margin-left: 12%;
   margin-right: 12%;
-  margin-top: 8rem;
-
+  margin-top: 3rem;
 }
 
 .learn-how {
@@ -17,7 +16,7 @@
   border: 0rem solid white;
   color: white;
   font-size: 2rem;
-  font-weight: 600;
+  font-weight: 400;
   border-radius: 4.3rem;
   font-family: "Cabin", sans-serif;
 }
@@ -25,106 +24,125 @@
 .oceaneers-cabin-large {
   font-family: "Cabin", sans-serif;
   font-weight: 700;
-  font-size: 8rem;
+  font-size: 6.5rem;
 }
 
 .oceaneers-cabin-small {
   font-family: "Cabin", sans-serif;
-  font-weight: 100;
-  font-size: 4rem;
+  font-weight: 400;
+  font-size: 3rem;
 }
 
 .oceaneers-cabin {
   font-family: "Cabin", sans-serif;
   font-weight: 700;
   font-size: 4.5rem;
+  margin-top: 1.7rem;
 }
 
 .oceaneers-raleway {
   font-family: "Raleway", sans-serif;
-  font-weight: 400;
-  font-size: 30px;
-  margin-top: 2rem;
+  font-weight: 300;
+  font-size: 2.5rem;
+  margin-top: 3rem;
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
   font-style: "Regular 400";
   text-align: center;
   justify-content: center;
+  position: static;
 }
 
 .our-purpose {
   color: #024a63;
   font-family: "Cabin", sans-serif ;
   font-weight: 700;
-  margin-top: 8rem;
-  font-size: 6rem;
+  margin-top: 7rem;
+  font-size: 4.5rem;
   text-align: center;
 }
 
 .our-purpose-text {
   color: #024a63;
   font-family: "Raleway", sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   margin-top: 80px;
   text-align: center;
   font-size: 3rem;
   margin-top: 1.5%;
-  margin-left: 229px;
-  margin-right: 228px;
+  margin-left: 14%;
+  margin-right: 14%;
 }
 
 .our-pillers-text {
   color: #024a63;
   font-family: "Raleway", sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   margin-top: 80px;
   text-align: center;
   font-size: 3rem;
-  margin-top: 1.5%;
-  margin-left: 229px;
-  margin-right: 228px;
+  margin-top: 3%;
+  margin-left: 14%;
+  margin-right: 14%;
 }
 
 .accordion {
-  margin-top: 3.2rem;
-  margin-bottom: 3.2rem;
-  background-color: #024a63 !important;
-  justify-content: center;
-  border: none;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .accordion-body-title {
   font-family: "Raleway", sans-serif;
   font-size: 2.3rem;
-  font-weight: 500;
+  font-weight: 300;
   border: none;
   text-align: center;
-  margin-top: 2rem;
+  margin-top: -2.5rem;
+  background-color: #024a63;
+  border-radius: 0rem 0rem 0rem 0rem;
+  margin-left: 12%;
+  margin-right: 12%;
+  width: 75%;
+  color: white;
 }
 
 .accordion-body {
   font-family: "Raleway", sans-serif;
   font-size: 2.3rem;
-  font-weight: 500;
+  font-weight: 300;
   border: none;
-  margin-left: 14%;
-  margin-right: 14%;
+  margin-left: 12%;
+  margin-right: 12%;
+  width: 75%;
+  background-color: #024a63;
+  color: white;
+  border-radius: 0rem 0rem 4.3rem 4.3rem;
+  margin-top: -2rem;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 .button-accordian {
   font-family: "Cabin", sans-serif;
   font-size: 2.5rem;
-  font-weight: 600;
-  background-color: #024a63;
+  font-weight: 300;
   border: none;
+  background-color: #024a63;
   border-radius: 4.3rem;
   color: white;
   width: 75%;
-  height: 7.2rem;
+  height: 6rem;
   margin-left: 12%;
   margin-right: 12%;
   text-align: center;
 }
 
-
+.plus-icon {
+  position: absolute;
+  font-size: 2.4rem;
+  right: 21rem; 
+  font-size: 2.5rem;
+}
 
 .card-title {
   font-family: "Cabin", sans-serif;
@@ -140,6 +158,7 @@
   margin-top: 35%;
   margin-left: 10%;
   margin-right: 10%;
+  
 }
 
 .card-text-ocean {
@@ -150,9 +169,6 @@
   margin-left: 10%;
   margin-right: 10%;
 }
-
-//should I make one for the last card, does the 
-//spacing look off 
 
 .why {
   color: #024a63;
