--- a/src/styles/_aboutUs.scss
+++ b/src/styles/_aboutUs.scss
@@ -2,20 +2,20 @@
   border: none;
 }
 
-.header {
+.header-about {
   font-family: "Cabin", sans-serif;
   font-size: 6.5rem;
   font-weight: 700;
   margin-top: 9.2rem;
 }
 
-.header-text {
+.header-text-about {
   font-family: "Cabin", sans-serif;
   font-size: 3rem;
   font-weight: 400;
   padding: 2.8rem 9.5rem 11.3rem 9.5rem;
 }
-.learn-how {
+.learn-how-about {
   padding: 0.5rem 3.5rem;
   margin-top: -2rem;
   background: #ff7c5c;
@@ -26,14 +26,14 @@
   border-radius: 4.3rem;
   font-family: "Cabin", sans-serif;
 }
-.repeating-h1 {
+.repeating-h1-about {
   color: #024a63;
   font-family: "Cabin", sans-serif;
   font-size: 4.5rem;
   font-weight: bold;
   margin-top: 3rem;
 }
-.repeating-h2 {
+.repeating-h2-about {
   color: #024a63;
   font-family: "Cabin", sans-serif;
   font-size: 2.4rem;
@@ -52,7 +52,7 @@
   line-height: 3.5rem;
   margin-bottom: 3rem;
 }
-.repeating-h3 {
+.repeating-h3-about {
   color: #024a63;
   font-family: "Cabin", sans-serif;
   font-size: 2rem;
@@ -61,7 +61,7 @@
   line-height: 3.5rem;
   margin-bottom: 3rem;
 }
-.repeating-h1-1 {
+.repeating-h1-1-about {
   color: #024a63;
   font-family: "Cabin", sans-serif;
   font-size: 5rem;
@@ -71,7 +71,7 @@
   margin-bottom: 3rem;
   padding-top: 2rem;
 }
-.h3 {
+.h3-about {
   padding-top: 0rem;
   padding-bottom: 2rem;
   font-family: Cabin;
@@ -104,27 +104,8 @@
   text-align: center;
   color: #024A63;
 }
-.slide {
-  padding-top: 6rem;
-  padding-left: 14.5rem;
-  padding-right: 14.5rem;
-}
 
-.card-title {
-  font-family: "Cabin", sans-serif;
-  font-size: 3.5rem;
-  font-weight: 600;
-}
-
-.card-text {
-  font-family: "Raleway", sans-serif;
-  font-size: 2rem;
-  font-weight: 400;
-  margin-bottom: 2.4rem;
-}
-
-
-.container {
+.container-about {
   margin-top: 2rem;
   margin-left: 16rem;
   margin-right: 16rem;
@@ -136,17 +117,17 @@
   border-radius: 10.3rem;
 }
 
-.accordion {
+.accordion about {
   margin-bottom: 3.2rem;
   //background-color: #e2f0ef !important;
 }
 
-.accordion-body {
+.accordion-body-about {
   font-family: "Raleway", sans-serif;
   font-size: 2.3rem;
   font-weight: 500;
 }
-.button-accordian {
+.button-accordian-about {
   font-family: "Cabin", sans-serif;
   font-size: 1.3rem;
   font-weight: 300;
