little tweaks for the merge change three

--- a/src/styles/_aboutUs.scss
+++ b/src/styles/_aboutUs.scss
@@ -44,7 +44,7 @@
 }
 .repeating-h2-name {
   color: #024a63;
-  padding-top: 6rem;;
+  padding-top: 6rem;
   font-family: "Cabin", sans-serif;
   font-size: 2.5rem;
   font-weight: 400;
@@ -56,7 +56,7 @@
   color: #024a63;
   font-family: "Cabin", sans-serif;
   font-size: 2rem;
-  margin-top: -2.5rem; 
+  margin-top: -2.5rem;
   font-weight: 400;
   line-height: 3.5rem;
   margin-bottom: 3rem;
@@ -82,11 +82,11 @@
   display: flex;
   align-items: center;
 
-  color: #024A63;
+  color: #024a63;
 }
 .repeating-h3-team {
   color: #024a63;
-  padding-top: 0.4rem;;
+  padding-top: 0.4rem;
   font-family: "Cabin", sans-serif;
   font-size: 2rem;
   font-weight: normal;
@@ -102,18 +102,18 @@
   padding-top: 1rem;
   font-style: italic;
   text-align: center;
-  color: #024A63;
+  color: #024a63;
 }
 
 .container-about {
   margin-top: 2rem;
   margin-left: 16rem;
   margin-right: 16rem;
-  background: #BEDEDF;
+  background: #bededf;
   border-radius: 7rem;
 }
-.ambasadors{
-  background: #BEDEDF;
+.ambasadors {
+  background: #bededf;
   border-radius: 10.3rem;
 }
 
@@ -127,39 +127,38 @@
   font-size: 2.3rem;
   font-weight: 500;
 }
-.button-accordian-about {
+.button-accordion-about {
   font-family: "Cabin", sans-serif;
   font-size: 1.3rem;
   font-weight: 300;
   padding: 1rem 3rem 1rem 3rem;
   outline: none;
-  background:#ff7c5c;
+  background: #ff7c5c;
   border: 0rem solid white;
   border-radius: 4.3rem;
   color: white;
   width: 13rem;
   height: 4rem;
-  
+
   margin-top: -3rem;
   margin-bottom: -3rem;
   margin-left: -3rem;
   margin-right: -3rem;
-  
 }
 .container-2 {
   width: 115rem;
   height: 523px;
   left: 59px;
   top: 1618px;
-  
-  background: #FFFFFF;
-  border: 1px solid #024A63;
+
+  background: #ffffff;
+  border: 1px solid #024a63;
   box-sizing: border-box;
   margin-left: 4rem;
   border-radius: 58px;
-  }
+}
 
-  .col-8 {
+.col-8 {
   width: 781px;
   height: 168px;
   left: 549px;
@@ -171,16 +170,15 @@
   font-size: 15px;
   line-height: 18px;
 
-  color: #024A63;
-  }
+  color: #024a63;
+}
 
-.rounded-circle-am{
+.rounded-circle-am {
   padding-top: 7rem;
   padding-left: 3rem;
   width: 35rem;
   overflow: hidden;
   margin-bottom: 2rem;
-
 }
 
 .interview {
@@ -205,19 +203,19 @@
   font-size: 2.5rem;
 }
 
-.il{
+.il {
   font-size: 1.75rem;
-  margin-top:0.3rem;
+  margin-top: 0.3rem;
   //margin-bottom: 0.2rem;
 }
 
-.rounded{
+.rounded {
   margin-top: 5rem;
   width: 20%;
 }
 .repeating-h2-iggy {
   color: #024a63;
-  padding-top: 4rem;;
+  padding-top: 4rem;
   font-family: "Cabin", sans-serif;
   font-size: 2.5rem;
   font-weight: 600;
@@ -226,7 +224,7 @@
 }
 .repeating-h3-iggy {
   color: #024a63;
-  padding-top: 2rem;;
+  padding-top: 2rem;
   font-family: "Cabin", sans-serif;
   font-size: 2.2rem;
   font-weight: normal;
