--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -51,10 +51,7 @@ nav ul {
   font-family: "Cabin", sans-serif;
 }
 
-.pointer {
+.pointer-why {
   cursor: pointer;
-}
-
-i {
   font-size: 2rem;
 }
