--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -200,7 +200,7 @@ i {
   margin-right: 14%;
 }
 
-.button-accordian {
+.button-accordion {
   font-family: "Cabin", sans-serif;
   font-size: 2.5rem;
   font-weight: 600;
