--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -97,7 +97,7 @@
   font-weight: 300;
   border: none;
   text-align: center;
-  margin-top: -2.5rem;
+  margin-top: -5.5rem;
   background-color: #024a63;
   border-radius: 0rem 0rem 0rem 0rem;
   margin-left: 12%;
@@ -122,8 +122,9 @@
   margin-bottom: 2rem;
 }
 
-.button-accordian-home {
+.button-accordion-home {
   font-family: "Cabin", sans-serif;
+  position: relative;
   font-size: 2.5rem;
   font-weight: 300;
   border: none;
