fixed partners page carousel

--- a/src/styles/_newsletter.scss
+++ b/src/styles/_newsletter.scss
@@ -1,6 +1,8 @@
 .newsLetter {
   min-height: 5vh;
   color: #024a63;
+  border: 1px solid #024a63;
+  padding-top: 2.4rem;
   .newsLetter-container {
     width: 100%;
     display: flex;
