--- a/src/styles/_partners.scss
+++ b/src/styles/_partners.scss
@@ -64,6 +64,7 @@
   margin-right: 10%;
   position: relative;
 }
+
 .card-title {
   font-family: "Cabin", sans-serif;
   font-size: 3.5rem;
@@ -112,42 +113,41 @@
 }
 
 // Drop Downs
-.accordion {
-  margin-top: 3.2rem;
-}
+.accordion-partners {
+  .accordion-body {
+    background-color: #e2f0ef;
+    margin-top: -4rem;
+    width: 32.4rem;
+    border-radius: 0rem 0rem 4.3rem 4.3rem;
+  }
+  .text-accordion {
+    background-color: #e2f0ef;
+    font-family: "Raleway", sans-serif;
+    font-size: 2.3rem;
+    font-weight: 500;
+    padding-top: 4rem;
+    padding-left: 1.6rem;
+    padding-right: 1.6rem;
+  }
 
-.accordion-body {
-  background-color: #e2f0ef;
-  margin-top: -4rem;
-  width: 32.4rem;
-  border-radius: 0rem 0rem 4.3rem 4.3rem;
-}
-.text-accordion {
-  background-color: #e2f0ef;
-  font-family: "Raleway", sans-serif;
-  font-size: 2.3rem;
-  font-weight: 500;
-  padding-top: 4rem;
-  padding-left: 1.6rem;
-  padding-right: 1.6rem;
-}
+  .button-accordion {
+    font-family: "Cabin", sans-serif;
+    font-size: 2.5rem;
+    font-weight: 600;
+    background-color: #024a63;
+    margin-top: 2.4rem;
+    border: none;
+    border-radius: 4.3rem;
+    color: white;
+    height: 7.4rem;
+    width: 32.4rem;
+    position: relative;
+  }
 
-.button-accordion {
-  font-family: "Cabin", sans-serif;
-  font-size: 2.5rem;
-  font-weight: 600;
-  background-color: #024a63;
-  border: none;
-  border-radius: 4.3rem;
-  color: white;
-  height: 7.4rem;
-  width: 32.4rem;
-  position: relative;
-}
-
-.plus-icon {
-  position: absolute;
-  right: 1.6rem;
-  top: 2.4rem;
-  font-size: 2.4rem;
+  .plus-icon-partners {
+    position: absolute;
+    right: 1.6rem;
+    top: 2.4rem;
+    font-size: 2.4rem;
+  }
 }
