--- a/src/styles/_aboutUs.scss
+++ b/src/styles/_aboutUs.scss
@@ -38,8 +38,7 @@
   font-family: "Cabin", sans-serif;
   font-size: 2.4rem;
   font-weight: normal;
-  margin-top: 1.6rem;
-  line-height: 3.5rem;
+  margin-top: 2rem;
   margin-bottom: 3rem;
 }
 .repeating-h2-name {
@@ -48,7 +47,7 @@
   font-family: "Cabin", sans-serif;
   font-size: 2.5rem;
   font-weight: 400;
-  margin-top: 1.6rem;
+  margin-top: 0rem;
   line-height: 3.5rem;
   margin-bottom: 3rem;
 }
@@ -74,10 +73,11 @@
 .h3-about {
   padding-top: 0rem;
   padding-bottom: 2rem;
+  margin-top: -1.5rem;
   font-family: Cabin;
   font-style: normal;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 2.2rem;
   line-height: 36px;
   display: flex;
   align-items: center;
@@ -117,9 +117,9 @@
   border-radius: 10.3rem;
 }
 
-.accordion about {
+.accordion-about {
   margin-bottom: 3.2rem;
-  //background-color: #e2f0ef !important;
+  margin-top: -1rem;
 }
 
 .accordion-body-about {
@@ -140,21 +140,21 @@
   width: 13rem;
   height: 4rem;
 
-  margin-top: -3rem;
+  margin-top: -5rem;
   margin-bottom: -3rem;
   margin-left: -3rem;
   margin-right: -3rem;
 }
 .container-2 {
-  width: 115rem;
-  height: 523px;
+  width: 100rem;
+  height: 50rem;
   left: 59px;
   top: 1618px;
 
   background: #ffffff;
   border: 1px solid #024a63;
   box-sizing: border-box;
-  margin-left: 4rem;
+  margin-left: 15rem;
   border-radius: 58px;
 }
 
@@ -182,7 +182,7 @@
 }
 
 .interview {
-  padding: 2rem 3rem;
+  padding: 1.1rem 2rem;
   margin-top: 3rem;
   background: #ff7c5c;
   border: 0rem solid white;
@@ -205,13 +205,16 @@
 
 .il {
   font-size: 1.75rem;
-  margin-top: 0.3rem;
-  //margin-bottom: 0.2rem;
+  line-height:1.6rem;
+  margin-top:0.6rem;
 }
 
 .rounded {
   margin-top: 5rem;
   width: 20%;
+}
+.rounded-circle-team{
+  margin-left: 2rem;
 }
 .repeating-h2-iggy {
   color: #024a63;
@@ -225,10 +228,11 @@
 .repeating-h3-iggy {
   color: #024a63;
   padding-top: 2rem;
+  padding-bottom: 3rem;
   font-family: "Cabin", sans-serif;
   font-size: 2.2rem;
   font-weight: normal;
   font-style: normal;
   margin-top: -2.5rem;
-  margin-bottom: 3rem;
+  margin-bottom: 6rem;
 }
