--- a/src/styles/_why.scss
+++ b/src/styles/_why.scss
@@ -186,6 +186,25 @@
 
 .why-carousel {
   min-height: 50vh;
+  .carousel-title-why {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    h3 {
+      font-size: 4.5rem;
+      font-weight: bold;
+      color: #024a63;
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      margin-bottom: 0rem;
+    }
+  }
+
+  .slide-why {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
 }
 
 .infographic {
