--- a/src/styles/_events.scss
+++ b/src/styles/_events.scss
@@ -1,20 +1,24 @@
+
 .events-cabin-large {
   font-family: "Cabin", sans-serif;
   font-weight: 700;
   font-size: 6.5rem;
+  margin-top: -20rem;
 }
 
 .events-cabin-small {
   font-family: "Cabin", sans-serif;
-  font-weight: 100;
-  font-size: 4rem;
+  font-weight: 400;
+  font-size: 3rem;
+  margin-bottom: 2.5rem;
   margin-left: 10%;
   margin-right: 10%;
 }
 
-.learn-how {
+.learn-how-events {
   padding: 0.5rem 3.5rem;
   margin-top: -2rem;
+  margin-bottom: 20rem;
   background: #ff7c5c;
   border: 0rem solid white;
   color: white;
