--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -97,9 +97,11 @@
   font-weight: 300;
   border: none;
   text-align: center;
-  margin-top: -5.5rem;
+  margin-top: -2.5rem;
+  margin-bottom: 2rem;
   background-color: #024a63;
   border-radius: 0rem 0rem 0rem 0rem;
+  padding-top: 3rem;
   margin-left: 12%;
   margin-right: 12%;
   width: 75%;
@@ -141,7 +143,7 @@
 .plus-icon {
   position: absolute;
   font-size: 2.4rem;
-  right: 21rem;
+  right: 3rem;
   font-size: 2.5rem;
 }
 
@@ -149,7 +151,7 @@
   font-family: "Cabin", sans-serif;
   font-size: 3rem;
   font-weight: 600;
-  margin-top: 16%;
+  margin-top: 15%;
 }
 
 .card-text {
@@ -157,6 +159,15 @@
   font-size: 2rem;
   font-weight: 400;
   margin-top: 35%;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.card-text-brand {
+  font-family: "Raleway", sans-serif;
+  font-size: 2rem;
+  font-weight: 400;
+  margin-top: 10%;
   margin-left: 10%;
   margin-right: 10%;
 }
