--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -186,9 +186,11 @@ nav ul {
   font-weight: 300;
   border: none;
   text-align: center;
-  margin-top: -5.5rem;
+  margin-top: -2.5rem;
+  margin-bottom: 2rem;
   background-color: #024a63;
   border-radius: 0rem 0rem 0rem 0rem;
+  padding-top: 3rem;
   margin-left: 12%;
   margin-right: 12%;
   width: 75%;
@@ -230,7 +232,7 @@ nav ul {
 .plus-icon {
   position: absolute;
   font-size: 2.4rem;
-  right: 21rem;
+  right: 3rem;
   font-size: 2.5rem;
 }
 
@@ -238,7 +240,7 @@ nav ul {
   font-family: "Cabin", sans-serif;
   font-size: 3rem;
   font-weight: 600;
-  margin-top: 16%;
+  margin-top: 15%;
 }
 
 .card-text {
@@ -246,6 +248,15 @@ nav ul {
   font-size: 2rem;
   font-weight: 400;
   margin-top: 35%;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.card-text-brand {
+  font-family: "Raleway", sans-serif;
+  font-size: 2rem;
+  font-weight: 400;
+  margin-top: 10%;
   margin-left: 10%;
   margin-right: 10%;
 }
@@ -286,19 +297,22 @@ nav ul {
   font-family: "Cabin", sans-serif;
   font-weight: 700;
   font-size: 6.5rem;
+  margin-top: -20rem;
 }
 
 .events-cabin-small {
   font-family: "Cabin", sans-serif;
-  font-weight: 100;
-  font-size: 4rem;
+  font-weight: 400;
+  font-size: 3rem;
+  margin-bottom: 2.5rem;
   margin-left: 10%;
   margin-right: 10%;
 }
 
-.learn-how {
+.learn-how-events {
   padding: 0.5rem 3.5rem;
   margin-top: -2rem;
+  margin-bottom: 20rem;
   background: #ff7c5c;
   border: 0rem solid white;
   color: white;
