adding a new branch

--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -19,6 +19,7 @@
   font-weight: 400;
   border-radius: 4.3rem;
   font-family: "Cabin", sans-serif;
+  cursor: pointer;
 }
 
 .oceaneers-cabin-large {
