--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -106,6 +106,7 @@ nav ul {
   font-weight: 400;
   border-radius: 4.3rem;
   font-family: "Cabin", sans-serif;
+  cursor: pointer;
 }
 
 .oceaneers-cabin-large {
