--- a/src/styles/_events.scss
+++ b/src/styles/_events.scss
@@ -27,3 +27,36 @@
   border-radius: 4.3rem;
   font-family: "Cabin", sans-serif;
 }
+
+@media (width: 375px) {
+
+.events-cabin-large {
+  font-family: "Cabin", sans-serif;
+  font-weight: 700;
+  font-size: 3rem;
+  margin-top: -20rem;
+}
+
+.events-cabin-small {
+  font-family: "Cabin", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  margin-bottom: 2.5rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.learn-how-events {
+  padding: 0.5rem 2rem;
+  margin-top: -1.8rem;
+  margin-bottom: 20rem;
+  background: #ff7c5c;
+  border: 0rem solid white;
+  color: white;
+  font-size: 1.3rem;
+  font-weight: 600;
+  border-radius: 4.3rem;
+  font-family: "Cabin", sans-serif;
+}
+
+}
